# kindle-burn

./: .gitattributes  .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT
.cargo/: config.toml
crates/kindle-core/: Cargo.toml
crates/kindle-core/src/: const_assert.rs  lib.rs
crates/kindle-core/src/device/: candle.rs  candle_autodiff.rs  fusion.rs  mod.rs  ndarray.rs  tch.rs  tch_autodiff.rs  wgpu.rs  wgpu_autodiff.rs
crates/kindle-core/src/dimensions/: mod.rs
crates/kindle-macros/: Cargo.toml
crates/kindle-macros/src/: lib.rs
crates/kindle-macros/src/stable/: mod.rs
crates/kindle-macros/src/stable/tensor/: mod.rs  parse_helper.rs
crates/kindle-macros/src/stable/tensor/derive/: mod.rs
crates/kindle-macros/src/stable/tensor/derive/fns/: all_dim.rs  any_dim.rs  autodiff.rs  base.rs  cat.rs  cov.rs  init.rs  matmul.rs  mod.rs  narrow.rs  one_hot.rs  ops.rs  repeat.rs  slice.rs  swap_dims.rs  switch_dims.rs  t_bool.rs  t_float.rs  transpose.rs  var.rs
crates/kindle-macros/src/stable/tensor/derive/traits/: mod.rs
examples/tensor/: Cargo.toml  test.rs
examples/tensor/src/: main.rs
src/: lib.rs
