[package]
name = "kindle-macros"
description = "Macro crate for Kindle-Burn"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# darling = { workspace = true }
